[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "xybern-agent-guard"
version = "0.1.4"
description = "Framework-agnostic authorization middleware for AI agents"
readme = "README.md"
license = { text = "MIT" }
authors = [{ name = "Xybern", email = "charalambos.theodorou@xybern.com" }]
requires-python = ">=3.9"
keywords = ["ai", "agents", "authorization", "llm", "safety", "middleware"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

# Zero required dependencies — stdlib only
dependencies = []

[project.optional-dependencies]
langchain = ["langchain>=0.1.0", "langchain-core>=0.1.0"]
openai    = ["openai>=1.0.0"]
anthropic = ["anthropic>=0.20.0"]
xybern    = []   # XybernBackend uses stdlib urllib — no extra deps
all = [
    "langchain>=0.1.0",
    "langchain-core>=0.1.0",
    "openai>=1.0.0",
    "anthropic>=0.20.0",
]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.23",
    "ruff",
    "mypy",
]

[project.urls]
Homepage    = "https://github.com/xybern-ai/agent-guard"
Repository  = "https://github.com/xybern-ai/agent-guard"
Issues      = "https://github.com/xybern-ai/agent-guard/issues"
Changelog   = "https://github.com/xybern-ai/agent-guard/blob/main/CHANGELOG.md"

[tool.hatch.build.targets.wheel]
packages = ["agent_guard"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py39"

[tool.mypy]
python_version = "3.9"
strict = true
ignore_missing_imports = true
